--- a/part3/telephone-guide-backend/package.json
+++ b/part3/telephone-guide-backend/package.json
@@ -16,7 +16,8 @@
   "author": "Alexander Blanco",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
