--- a/part3/telephone-guide-backend/package.json
+++ b/part3/telephone-guide-backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "telephone-guide-backend",
   "version": "1.0.0",
-  "description": "Backend for de telephone guide",
+  "description": "Backend for de telephone guide part 3",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
