--- a/part3/telephone-guide-backend/package.json
+++ b/part3/telephone-guide-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "REST",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
+    "eslint": "^8.38.0",
     "nodemon": "^2.0.22"
   }
 }
