--- a/part4/package.json
+++ b/part4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "eslint ."
   },
   "keywords": [
@@ -24,6 +24,10 @@
   "devDependencies": {
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
