--- a/part4/package.json
+++ b/part4/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.22"
   },
   "jest": {
