--- a/part4/package.json
+++ b/part4/package.json
@@ -16,6 +16,7 @@
   "author": "ablancoa95@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
